# schedulerproject

./: .gitignore  CMakeLists.txt  LICENSE  Project.md  README.md
code/: project  project.cpp
code/python/: course_block.txt  course_data.json  course_meta.json  degree_audit_data.json  generatedata.py
data/: CatalogData.json  CourseMetaData.json  DegreeAuditData.json
include/: dataclasses.hpp  datastore.hpp  engine.hpp  preferences.hpp
